[package]
name = "pdf2image-alt"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Alternative version to pdf2imge with ability to render from borrowed data and single pages"
homepage = "https://github.com/jacobtread/pdf2image"
repository = "https://github.com/jacobtread/pdf2image"
keywords = ["pdf", "image", "conversion", "poppler", "pdf2img"]
categories = [
    "multimedia",
    "multimedia::images",
    "multimedia::encoding",
    "visualization",
]
exclude = ["examples/pdfs/*"]

[dependencies]
derive_builder = "0.20.0"
futures = "0.3"
image = { version = "0.25.1", default-features = false, features = [
    "rayon",
    "jpeg",
] }
thiserror = "1"
tokio = { version = "1", features = ["io-util", "process"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
